--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 /></noscript>
 <!-- End Facebook Pixel Code -->
 <script>
-  fbq('track', 'CompleteRegistration', {
+  fbq('track', 'ViewContent', {
     value: 1,
     currency: 'USD',
   });
