--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head> 
 <title>転送</title> 
-<meta http-equiv="refresh" content="0;url=https://lin.ee/7myLsXf">
+<meta http-equiv="refresh" content="0;url=https://greenfunding.jp/lab/projects/3548">
 <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
